# aw-pac

./: .xtask.toml  Cargo.toml  LICENSE-APACHE  README.md  d1_unofficial.svd  device.x  renovate.json  update.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.yaml  rustfmt.yaml
d1-pac/: Cargo.toml  device.x  update.sh
d1-pac/src/: audio_codec.rs  ccu.rs  ce_ns.rs  cir_rx.rs  cir_tx.rs  clint.rs  csic.rs  dmac.rs  dmic.rs  dsp_msgbox.rs  emac.rs  generic.rs  gpadc.rs  gpio.rs  hs_timer.rs  i2s_pcm.rs  i2s_pcm2.rs  interrupt.rs  iommu.rs  ledc.rs  lib.rs  lradc.rs  owa.rs  plic.rs  pwm.rs  riscv_cfg.rs  rtc.rs  smhc.rs  spi0.rs  spi_dbi.rs  spinlock.rs  sys_cfg.rs  tcon_lcd0.rs  tcon_tv0.rs  ths.rs  timer.rs  tpadc.rs  tvd0.rs  tvd_top.rs  tve.rs  (+6 more)
r528-pac/: Cargo.toml  README.md  update.sh
r528-pac/src/: ccu.rs  ce_ns.rs  csic.rs  dsp_msgbox.rs  emac.rs  generic.rs  hstimer.rs  interrupt.rs  ledc.rs  lib.rs  pwm.rs  spi0.rs  spinlock.rs  sys_cfg.rs  ths.rs  usb1.rs
src/: audio_codec.rs  ccu.rs  cir_tx.rs  clint.rs  csic.rs  dmic.rs  dsp_msgbox.rs  gpio.rs  hstimer.rs  interrupt.rs  lib.rs  lradc.rs  riscv_cfg.rs  smhc1.rs  spi0.rs  tcon_tv0.rs  thc.rs  timer.rs  tpadc.rs  tvd0.rs  tvd_top.rs  uart0.rs
src/audio_codec/: ac_adc_cnt.rs  ac_adc_dap_ctr.rs  ac_adc_drc_epshc.rs  ac_adc_drc_hhpfc.rs  ac_adc_drc_hkn.rs  ac_adc_drc_lkl.rs  ac_adc_drc_mnghs.rs  ac_adc_drc_mngls.rs  ac_adc_drc_mxgls.rs  ac_adc_drc_rrmshat.rs  (+18 more)
svd/: .svdfmt.yaml  CMSIS-SVD.xsd  d1_unofficial.svd  r528_unofficial.yaml  v853_unofficial.svd  xr806_unofficial.svd
v853-pac/: Cargo.toml  README.md  device.x  update.sh
xr806-pac/: Cargo.toml  README.md  device.x  update.sh
xtask/: Cargo.toml  LICENSE-MIT  README.md  renovate.json
xtask/src/: main.rs
(+2822 files in other folders)
