[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
form = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
svd2rust = "0.28"
svdtools = "0.2"
toml = "0.5.9"
