[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = "0.9.1"
form = "0.10.0"
log = "0.4.17"
phf = { version = "0.11.1", features = ["macros"] }
svd2rust = "0.26.0"
svdtools = "0.2.7"
