[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
form = "0.10"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
svd2rust = "0.26"
svdtools = "0.2"
